Added screenshot to intro

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -6,7 +6,13 @@
    "source": [
     "<img src=\"imgs/header.png\" width=\"100%\">\n",
     "\n",
-    "\n",
+    "---------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Unit III: Probabilistic filtering\n",
     "#### Inferring user intention in a noisy world\n",
     "<b>[John Williamson](http://johnhw.com)</b> \n",
@@ -20,7 +26,7 @@
     ">What are we to do? \n",
     "> We must be sure to remain uncertain.\n",
     ">\n",
-    "> -- *[Leonard A. Smith, Proc. International School of Physics ``Enrico Fermi\", (1997)](http://www2.maths.ox.ac.uk/~lenny/fermi96_main_abs.html)* \n"
+    "> -- *[Leonard A. Smith, Proc. International School of Physics ``Enrico Fermi\", (1997)](http://www2.maths.ox.ac.uk/~lenny/fermi96_main_abs.html)* "
    ]
   },
   {
@@ -62,7 +68,9 @@
    "metadata": {},
    "source": [
     "### Why is this computational HCI?\n",
-    "Probabilistic filtering means writing down an **executable, statistical model** of behavior. This has the two key elements of computational interaction:\n",
+    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. \n",
+    "\n",
+    "This has the two key elements of computational interaction:\n",
     "* an explicit mathematical model of user-system behavior;\n",
     "* an algorithmic element that, using this model, can apply computational power to improving interaction.\n",
     "\n",
@@ -80,10 +88,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What are existing techniques?\n",
+    "### What are competitive approaches?\n",
     "* **Crafted mappings**, where we try to find (by hand) transforms from sensors to intentions that are  simple or obvious. **Example:** a button, which has two physical states, and maps on to two intentional states via two electrical states. Pushed down = current flows = user intended to switch on. The mapping from electrical states to intentional states is **designed.**\n",
     "\n",
-    "* **Machine learning**, where we train a system to recognize a class of input patterns as being representative of an intended behavior. **Example:** Finger gesture recognizer; hundreds of examples of many users performing one of N multi-touch gestures are recorded. These are used to train a random forest to classify the intended gesture. The mapping from electrical states (capacitive sensors) to intentional states is **learned**."
+    "* **Machine learned mappings**, where we train a system to recognize a class of input patterns as being representative of an intended behavior. **Example:** Finger gesture recognizer; hundreds of examples of many users performing one of N multi-touch gestures are recorded. These are used to train a random forest to classify the intended gesture. The mapping from electrical states (capacitive sensors) to intentional states is **learned**."
    ]
   },
   {
@@ -93,8 +101,10 @@
     "### Benefits\n",
     "* **Robustness to noise** PFs work well even with sensors that are noisy.\n",
     "* **Robustness to poorly specified models** PFs can cope predictably even if our models are bad.\n",
-    "* **Robustness to intermittence** PFs can continue sensibly interpolate when input cuts out.\n",
+    "* **Robustness to intermittence** PFs can continue to sensibly interpolate when input cuts out.\n",
     "* **Uncertainty estimates** PFs **know how certain they are** and this can be used in the interaction design\n",
+    "* **Decoupled from real-time** PFs can infer past (smoothing), present (filtering) and future (forecasting).\n",
+    "* **Easy fusion of multiple input sensors** PFs are often used to solely to fuse together multiple inputs from different sensors.\n",
     "* **Better feedback** PFs predict distributions over past, present and future, and they offer the opportunity to give rich feedback insights to users.\n",
     "* **Flexible modeling** PFs can incorporate both fundamental modeling (e.g. physiological or cognitive models) and data-driven machine learning."
    ]
@@ -116,6 +126,7 @@
    "metadata": {},
    "source": [
     "## Principles [28 mins]\n",
+    "-------\n",
     "### Overview diagram"
    ]
   },
@@ -161,7 +172,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -178,21 +189,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outlook [5 mins]\n",
+    "## Outlook\n",
+    "---------------------\n",
     "### Scope and limitations\n",
+    "#### Scope\n",
+    "\n",
     "#### Limitations\n",
     "* PFs can be computationally intensive to run. \n",
     "* Curse-of-dimensionality can make the attractive simplicity of PFs work poorly in practice as the state space expands.\n",
+    "* Sometimes the inverse probability model can be hard to formulate.\n",
     "* Particle filters are simple and elegant, but inferentially weak.\n",
     "* Kalman filters are rigid and restrictive, but very inferentially efficient.\n",
-    "* Hybrid approaches (Ensemble Kalman filter, Unscented Kalman Filter, hybrid particle/Kalman filters) can trade these off, but aren't off the shelf solutions.\n",
+    "* Hybrid approaches (Ensemble Kalman filter, Unscented Kalman Filter, hybrid particle/Kalman filters) can trade these qualities off, but they aren't off the shelf solutions (i.e. you need an expert!).\n",
     "\n",
     "\n",
     "### Resources\n",
-    "How do I learn to do this in depth? Blogs, papers, software, videos, online courses, etc.\n",
     "* Read the [Condensation paper](http://vision.stanford.edu/teaching/cs231b_spring1415/papers/isard-blake-98.pdf).\n",
     "* Read [the Kalman filter in pictures](http://www.bzarg.com/p/how-a-kalman-filter-works-in-pictures/)\n",
-    "* Watch [the particle filter without equations](https://www.youtube.com/watch?v=aUkBa1zMKv4)"
+    "* Watch [the particle filter without equations](https://www.youtube.com/watch?v=aUkBa1zMKv4)\n",
+    "\n",
+    "**some more HCI related resources**"
    ]
   },
   {
@@ -206,7 +222,7 @@
     "Much use of probabilistic filters has depended on strong mathematical models of the fundamental process. For example, in rocket science, sophisticated physics models were used to specify the Kalman filters used for stable control. \n",
     "\n",
     "However, it is becoming increasingly possible to **infer** these models from observations. Techniques such as deep learning (for example variational autoencoders or generative adversarial networks) make it possible to learn very sophisticated *generative models* from observations of\n",
-    "data. \n",
+    "data.  \n",
     "\n",
     "These models can be dropped into probabilistic filters to produce robust inferential engines for user interaction."
    ]
