--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img  src=\"Capture.PNG\"/>\n",
+    "<img  src=\"imgs/Capture.PNG\"/>\n",
     "*A probabilistic filter-based gesture recogniser*"
    ]
   },
@@ -136,7 +136,32 @@
    "source": [
     "### Use case\n",
     "### Problem description\n",
-    "We are going to solve xxx\n",
+    "We are going to solve xxx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# import the things we need\n",
+    "from __future__ import print_function, division\n",
+    "import numpy as np\n",
+    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pykalman, pfilter\n",
+    "import ipywidgets\n",
+    "import IPython\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Meat\n",
     "Meat goes here!"
    ]
@@ -154,10 +179,10 @@
     "| Unscented Kalman| Arbitrary      | Gaussian           | High       | ?         |\n",
     "| HMM             | Transitions    | Discrete           | High       | Yes       |\n",
     "\n",
-    "* Dynamics: permissible state transition functions.\n",
-    "* State distribution: distribution type for representing current state.\n",
+    "* Dynamics: permissible state transition functions (i.e. how we go from now to the next timestep).\n",
+    "* State distribution: distribution type for representing current state. Gaussian distributions are very efficient, but can't represent multiple modes.\n",
     "* Efficiency: computational efficiency.\n",
-    "* Optimizable: can the parameters of the filter be automatically optimized given training data?\n"
+    "* Optimizable: is there an algorithm to optimize the  parameters of the filter be *automatically* given training data?\n"
    ]
   },
   {
