--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -68,20 +68,23 @@
    "metadata": {},
    "source": [
     "### Why is this computational HCI?\n",
-    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. \n",
+    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. The **parameters** of the statistical model can be **learned from data**.\n",
     "\n",
-    "This has the two key elements of computational interaction:\n",
+    "This has four key elements of computational interaction:\n",
     "* an explicit mathematical model of user-system behavior;\n",
-    "* an algorithmic element that, using this model, can apply computational power to improving interaction.\n",
+    "* a way of updating that model with observed data from users;\n",
+    "* an algorithmic element that, using this model, can apply computational power to improving interaction;\n",
+    "* the ability to simulate or synthesise elements of the expected user-system behavior.\n",
     "\n",
-    "It satisfies the requirement that better interfaces can be achieved via \n",
+    "It satisfies the requirement that better interfaces can be achieved via:\n",
     "* improved modeling;\n",
+    "* better data collection;\n",
     "* more powerful algorithms;  \n",
     "* or increased computational power, \n",
     "\n",
     "rather than the workhorses of traditional HCI:\n",
     "* more design ingenuity;\n",
-    "* and stronger evaluation."
+    "* and stronger evaluation.\n"
    ]
   },
   {
