Updated diagrams, added a little bit of code

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -19,14 +19,14 @@
     "\n",
     "----\n",
     "\n",
-    ">All theorems are true. \n",
-    ">All models are wrong. \n",
-    ">And all data are inaccurate. \n",
-    ">\n",
-    ">What are we to do? \n",
-    "> We must be sure to remain uncertain.\n",
-    ">\n",
-    "> -- *[Leonard A. Smith, Proc. International School of Physics ``Enrico Fermi\", (1997)](http://www2.maths.ox.ac.uk/~lenny/fermi96_main_abs.html)* "
+    "    All theorems are true. \n",
+    "    All models are wrong. \n",
+    "    And all data are inaccurate. \n",
+    "\n",
+    "    What are we to do? \n",
+    "    We must be sure to remain uncertain.\n",
+    "\n",
+    "-- *[Leonard A. Smith, Proc. International School of Physics ``Enrico Fermi\", (1997)](http://www2.maths.ox.ac.uk/~lenny/fermi96_main_abs.html)* "
    ]
   },
   {
@@ -41,26 +41,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction \n",
+    "# Introduction \n",
     "\n",
     "-----------------\n",
     "\n",
     "### What is probabilistic filtering?\n",
-    "One view on interaction is to see user intentions as **unknown values** which are partially observed through input sensors. The time series of inputs only give a partial, noisy, incomplete view of intention. \n",
+    "One view on interaction is to see user intentions as **unknown values** which are partially observed through input sensors. The time series of inputs from the user only give a partial, noisy, incomplete view of intention inside the user's head. \n",
     "\n",
+    "### Interaction model\n",
     "<img src=\"imgs/brainspace.png\" width=\"100%\">\n",
     "\n",
-    "Probabilistic filtering makes it possible to track the evolution of some unknown variables [user intentions] given observed evidence [input], in a way that is **robust**. They work by inferring a **distribution** over possible hidden variables, and updating them over time.\n",
+    "#### Probabilistic filtering in HCI\n",
+    "Probabilistic filtering **(PF)** tracks the evolution of some unknown variables [user intentions] given observed evidence [user input], in a way that is **robust**. Probabilistic filters infer a **distribution** over possible hidden (unobserved) variables, updating them over time. They are inherently **uncertain** (they represent degrees of belief) and **dynamic** (they explicitly model changing state over time).\n",
     "\n",
-    "<img src=\"imgs/stochastic.png\" width=\"50%\">\n",
-    "\n",
-    "Probabilistic filtering is an **inverse probability** approach, and it requires that we think of interaction from a unique perspective. We have to explicitly be able to write down:\n",
+    "Probabilistic filtering is an **inverse probability** approach, and it requires that we think of interaction from an unique perspective. We have to explicitly be able to write down:\n",
     "\n",
     "* what we want to know (i.e. the **state space of intention**);\n",
     "* how that will change over time (i.e. the **dynamics of intention**);\n",
-    "*  a model that *if we knew what the user intention was, what the expected behavior would be* (i.e. a **function mapping intention -> expected inputs**).\n",
+    "*  a model that *if we knew what the user intention was, what the expected behavior would be* (i.e. a **function mapping intention -> expected user inputs**).\n",
     "\n",
-    "Note that this last point is the **inverse** of the typical way of approaching this problem, where we try and find a mapping from a sensors to intention, by design or by learning. \n"
+    "Note that this last point is the **inverse** of the typical way of approaching this problem, where we would try and find a mapping from a sensors to intention, by design or by learning. "
    ]
   },
   {
@@ -68,13 +68,13 @@
    "metadata": {},
    "source": [
     "### Why is this computational HCI?\n",
-    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. The **parameters** of the statistical model can be **learned from data**.\n",
+    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. The **parameters** of the filter can be **learned from data**.\n",
     "\n",
     "This has four key elements of computational interaction:\n",
     "* an explicit mathematical model of user-system behavior;\n",
     "* a way of updating that model with observed data from users;\n",
     "* an algorithmic element that, using this model, can apply computational power to improving interaction;\n",
-    "* the ability to simulate or synthesise elements of the expected user-system behavior.\n",
+    "* the ability to simulate or synthesize elements of the expected user-system behavior.\n",
     "\n",
     "It satisfies the requirement that better interfaces can be achieved via:\n",
     "* improved modeling;\n",
@@ -102,13 +102,13 @@
    "metadata": {},
    "source": [
     "### Benefits\n",
-    "* **Robustness to noise** PFs work well even with sensors that are noisy.\n",
+    "* **Robustness to noise** PFs work well even with input sensors that are noisy.\n",
     "* **Robustness to poorly specified models** PFs can cope predictably even if our models are bad.\n",
     "* **Robustness to intermittence** PFs can continue to sensibly interpolate when input cuts out.\n",
-    "* **Uncertainty estimates** PFs **know how certain they are** and this can be used in the interaction design\n",
+    "* **Uncertainty estimates** PFs *know how certain they are* and this can be used in the interaction design.\n",
     "* **Decoupled from real-time** PFs can infer past (smoothing), present (filtering) and future (forecasting).\n",
     "* **Easy fusion of multiple input sensors** PFs are often used to solely to fuse together multiple inputs from different sensors.\n",
-    "* **Better feedback** PFs predict distributions over past, present and future, and they offer the opportunity to give rich feedback insights to users.\n",
+    "* **Better feedback** PFs  offer the opportunity to give users rich insight into the process of intention decoding.\n",
     "* **Flexible modeling** PFs can incorporate both fundamental modeling (e.g. physiological or cognitive models) and data-driven machine learning."
    ]
   },
@@ -121,16 +121,35 @@
     "* late 1960-1990s Particle filter / sequential Monte Carlo\n",
     "* 1992 Bootstrap filter (Gordon)\n",
     "* 1995 Unscented Kalman Filter (Uhlmann)\n",
-    "* 1998 Condensation: particle filter for vision problems (Isard and Blake)"
+    "* 1998 Condensation: particle filter for vision problems (Isard and Blake) \n",
+    "\n",
+    "We will base our model on that proposed by Isard and Blake."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Principles [28 mins]\n",
+    "# Principles \n",
     "-------\n",
-    "### Overview diagram"
+    "### Overview diagram\n",
+    "<img src=\"imgs/control_loop.png\">\n",
+    "\n",
+    "\n",
+    "\n",
+    "Notation:\n",
+    "* We have a sequence of states over time, indexed by $t$\n",
+    "* $X_t$ the variable we want to know (at time $t$). \n",
+    "* $Y_t$ the variable we can observe.\n",
+    "* $\\hat{X_t}$ our estimate of the variable we want to know.\n",
+    "\n",
+    "* We want to compute $\\hat{X_t}=P(X_t|Y_t)$ (the **inverse problem**). \n",
+    "* We use a **forward model** $P(Y_t|X_t)$ to infer this.\n",
+    "* We need to define two functions: $Y_t = f(X_t)$ (the **observation function**) and $X_{t} = g(X_{t-1})$ (the **dynamics** or **process function**).\n",
+    "\n",
+    "* $f$ and $g$ are often very simple functions.\n",
+    "\n",
+    "<img src=\"imgs/stochastic.png\" width=\"50%\">\n"
    ]
   },
   {
@@ -139,7 +158,10 @@
    "source": [
     "### Use case\n",
     "### Problem description\n",
-    "We are going to solve xxx"
+    "We are going to solve xxx\n",
+    "\n",
+    "#### Algorithm\n",
+    "We will use the **particle filter** algorithm, although I will briefly explain how an unscented Kalman filter could be used for part of the estimation."
    ]
   },
   {
@@ -217,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Outlook\n",
+    "# Outlook\n",
     "---------------------\n",
     "### Scope and limitations\n",
     "#### Scope\n",
@@ -232,9 +254,14 @@
     "\n",
     "\n",
     "### Resources\n",
+    "#### Basic\n",
     "* Read the [Condensation paper](http://vision.stanford.edu/teaching/cs231b_spring1415/papers/isard-blake-98.pdf).\n",
     "* Read [the Kalman filter in pictures](http://www.bzarg.com/p/how-a-kalman-filter-works-in-pictures/)\n",
     "* Watch [the particle filter without equations](https://www.youtube.com/watch?v=aUkBa1zMKv4)\n",
+    "\n",
+    "#### Advanced\n",
+    "* [A technical but succinct and clear explanation of the particle filter](http://www.cns.nyu.edu/~eorhan/notes/particle-filtering.pdf)\n",
+    "* [A bibliography of particle filter papers](http://www.stats.ox.ac.uk/~doucet/smc_resources.html)\n",
     "\n",
     "**some more HCI related resources**"
    ]
