Added basic particle filter code

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -123,7 +123,7 @@
     "* 1995 Unscented Kalman Filter (Uhlmann)\n",
     "* 1998 Condensation: particle filter for vision problems (Isard and Blake) \n",
     "\n",
-    "We will base our model on that proposed by Isard and Blake."
+    "**We will base our model in this unit roughly on the algorithm variant proposed by Isard and Blake.**"
    ]
   },
   {
@@ -165,8 +165,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic filtering"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -180,6 +187,8 @@
     "import pykalman, pfilter\n",
     "import ipywidgets\n",
     "import IPython\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (14.0, 8.0)\n",
     "%matplotlib inline"
    ]
   },
@@ -187,8 +196,182 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Meat\n",
-    "Meat goes here!"
+    "### Some test data\n",
+    "To test the particle filter, we will try and track a very simple, 1D sine wave:\n",
+    "$$Y_t=\\sin(t)$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "t = np.linspace(0,20,100)\n",
+    "x = np.sin(t)\n",
+    "plt.plot(t,x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple model\n",
+    "We will use a very simple model\n",
+    "\n",
+    "* **Dynamics**\n",
+    "We assume that there are no predictable dynamics, just some Gaussian noise $X_t = X_t+1 + \\epsilon$\n",
+    "\n",
+    "* **Evidence**\n",
+    "We assume that the sensor we measure is the value we want to infer, i.e. $Y_t=X_t$, and $g(X_t)$  is just the identity.\n",
+    "\n",
+    "* **Weighting**\n",
+    "We weight samples according to how similar they are to the observed output. We use a simple RBF kernel:\n",
+    "$$w_i = e^{\\left(-\\frac{(y-y^\\prime)^2}{2\\sigma^2}\\right)}$$\n",
+    "Note that this gives more weight to particles that are more similar to the observation: it is a **similarity** function, not a distance function.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Identity Example\n",
+    "def dynamics(x):\n",
+    "    # tomorrow is the same as today\n",
+    "    # but slightly randomly different\n",
+    "    return x+np.random.normal(0,0.1,x.shape)\n",
+    "\n",
+    "def observe(x):\n",
+    "    # we observe x directly\n",
+    "    return x[:,0]\n",
+    "\n",
+    "def weight(true_y, hypothesized_y):\n",
+    "    # RBF similarity function\n",
+    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/0.05)\n",
+    "    \n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "# we assume that, before seeing any evidence, that the particles are \n",
+    "# normally distributed about 0, with std. dev. 1.0\n",
+    "prior = [norm(0,1)] # x ~ N(0,1)\n",
+    "\n",
+    "pf_simple = pfilter.ParticleFilter(initial=prior, \n",
+    "                                    observe_fn=observe,\n",
+    "                                    n_particles=200,                                    \n",
+    "                                    dynamics_fn=dynamics,\n",
+    "                                    weight_fn=weight,                    \n",
+    "                                    resample_proportion=0.02)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def plot_filter(pfilter, time, inputs, expected):\n",
+    "    \"\"\"Apply a particle filter to a time series, and plot the\n",
+    "    first component of the predictions alongside the expected\n",
+    "    output.\"\"\"\n",
+    "    plt.plot(time, expected, 'C1', lw=3)\n",
+    "    particles = []\n",
+    "    for i in range(len(x)):    \n",
+    "        pfilter.update(np.array([x[i]]).reshape(1,1))\n",
+    "        particles.append(pfilter.particles[:,0])    \n",
+    "    ts = np.tile(time[:,None], pfilter.n_particles)    \n",
+    "    plt.scatter(ts, np.array(particles), alpha=0.2, c='C0', s=1)\n",
+    "    plt.legend([\"True\",\"Estimated\"])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plot_filter(pf_simple, t, x, x)\n",
+    "plt.ylim(-1.5, 1.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A more interesting example\n",
+    "Imagine we wanted to infer the **phase** of the oscillator driving this sine wave. The phase variable is not observable, but we want to infer it from the observed oscillation. Furthermore, we want the *unwrapped* phase, i.e. we expect the phase to monotonically increase.\n",
+    "\n",
+    "* **Evidence**\n",
+    "We postulate an observation model:\n",
+    "$$Y_t = \\sin(X_t)$$\n",
+    "\n",
+    "Because we defined $Y_t=\\sin(t)$, we are actually trying to infer $t$.\n",
+    "\n",
+    "* **Dynamics**\n",
+    "We assume that we have a very simple dynamical system, where we have a velocity and a position.\n",
+    "$$X_t = \\begin{bmatrix}x \\\\ \\dot{x}\\end{bmatrix},$$ and \n",
+    "$$X_{t+1} = X_t + \\begin{bmatrix}\\dot{x} \\\\ 0 \\end{bmatrix}.$$\n",
+    "\n",
+    "* **Priors**\n",
+    "We again assume that the initial distribution is normally distributed, but that the std. dev. of the velocity is smaller than the position.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "### Example\n",
+    "def linear_dynamics(x):    \n",
+    "    y = np.array(x)\n",
+    "    y[:,0] += y[:,1]    \n",
+    "    \n",
+    "    # process noise \n",
+    "    y += np.random.normal(0,[0.1,0.001],x.shape)\n",
+    "    return y\n",
+    "\n",
+    "def observe_sin(x):    \n",
+    "    # y = sin(x)    \n",
+    "    return np.sin(x[:,0])\n",
+    "\n",
+    "def weight_sin(true_y, hypothesized_y):\n",
+    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/0.5)\n",
+    "    \n",
+    "from scipy.stats import norm\n",
+    "prior = [norm(0,0.25), norm(0,0.35)] \n",
+    "\n",
+    "pf_sin = pfilter.ParticleFilter(initial=prior, \n",
+    "                                observe_fn=observe_sin,\n",
+    "                                n_particles=200,\n",
+    "                                dynamics_fn=linear_dynamics,\n",
+    "                                weight_fn=weight_sin,                    \n",
+    "                                resample_proportion=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pf_sin.init_filter()\n",
+    "plot_filter(pf_sin, t, x, t)"
    ]
   },
   {
@@ -270,6 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "------\n",
     "### Future of probabilistic filtering\n",
     "\n",
     "#### Learned models\n",
